...
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/chatMessagesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".messaging.chatMessages.ChatMessagesFragment" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <EditText
        android:id="@+id/typeMessageET"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:hint="type message" />


    <Button
        android:id="@+id/sendMessageBtn"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
...
