...
            android:icon="@drawable/ic_schedule"
            android:title="Schedule" />

        <item
            android:id="@+id/chatsListFragment"
            android:icon="@drawable/ic_message"
            android:title="Direct Messages" />

        <item
            android:id="@+id/usersListFragment"
            android:icon="@drawable/ic_search"
            android:title="Search Users" />


    </group>

</menu>

