<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crete_post"
    tools:context=".posts.createpost.CreatePostFragment">


    <TextView
        android:id="@+id/postTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/post_title"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postSubjectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorRed" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postSubjectET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type title" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postSubjectContainer"
        android:layout_margin="16dp"
        android:text="Description"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/postDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textMultiLine"
        android:layout_below="@id/descriptionTV"
        android:linksClickable="true"
        android:hint="insert link or attach pdf file" />


    <TextView
        android:id="@+id/pdfBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/descriptionTV"
        android:drawableLeft="@drawable/ic_pdf"
        android:drawableStart="@drawable/ic_pdf"
        android:text="filename.pdf"
        android:gravity="center"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>


    <Button
        android:id="@+id/postBtn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/postDescriptionET"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="265dp"
        android:background="@drawable/register_rounded_button"
        android:text="POST"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="gone" />


</RelativeLayout>