...
    <string name="private_radio_button">private</string>
    <string name="done_button">DONE</string>

    <!-- for menu items on the navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_myGroups">My Groups</string>
    <string name="menu_createGroup">Create Group</string>
    <string name="menu_exploreGroup">Search Groups</string>

    <!-- button that appears in the recycler view in my groups page -->
    <string name="see_available_groups">see available groups</string>


    <!-- these are attributes that belong to the dialog private group xml file -->
...
