...
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorRed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/typeCommentET"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:hint="type comment" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/submitCommentBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="60dp"
...
