...


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/forgotPasswordBtn"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="Password"
            android:text="@={loginViewModel.password}"
            app:passwordValidator="@{loginViewModel.password}"
...


        <TextView
            android:id="@+id/noAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/registerBtn"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/no_account_tv"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="433dp" />
...
